updates Contact form heading and fixes extra space for mobile responsive

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2817,7 +2817,7 @@ input, select, textarea {
 				}
 
 				.spotlight .image {
-					width: 100%;
+					width: 95%;
 				}
 
 				.spotlight .content {
